<resources>
    <string name="app_name">Fridgerec</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>

    <!-- Paste BOTH strings as required -->
    <string name="back4app_app_id">BrHwJkyQyRDdqqWE75lse3vMeOrwuZHHkzhfTqqr</string>
    <string name="back4app_client_key">ei7qiwp7FDZ6EtbJSvdSQlN9U70L5rcWCMO0PrWU</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chip_food_name">food name</string>
    <string name="chip_food_group">food group</string>
    <string name="chip_source_date">source date</string>
    <string name="chip_expire_date">expire date</string>
    <string name="chip_expire_before">expire before</string>
    <string name="chip_expire_after">expire after</string>
    <string name="chip_sourced_before">sourced before</string>
    <string name="chip_sourced_after">sourced after</string>
    <string name="datepicker_btn_txt">select date</string>

    <string name="dropdown_select_food_group">select food group</string>

    <string-array name="foodGroupStrings">
        <item>Baking</item>
        <item>Health Foods</item>
        <item>Spices and Seasonings</item>
        <item>Pasta and Rice</item>
        <item>Bakery/Bread</item>
        <item>Refrigerated</item>
        <item>Canned and Jarred</item>
        <item>Frozen</item>
        <item>Nut butters, Jams, and Honey</item>
        <item>Oil, Vinegar, Salad Dressing</item>
        <item>Condiments</item>
        <item>Savory Snacks</item>
        <item>Milk, Eggs, Other Dairy</item>
        <item>Ethnic Foods</item>
        <item>Tea and Coffee</item>
        <item>Meat</item>
        <item>Gourmet</item>
        <item>Sweet Snacks</item>
        <item>Gluten Free</item>
        <item>Alcoholic Beverages</item>
        <item>Cereal</item>
        <item>Nuts</item>
        <item>Beverages</item>
        <item>Produce</item>
        <item>Not in Grocery Store/Homemade</item>
        <item>Seafood</item>
        <item>Cheese</item>
        <item>Dried Fruits</item>
        <item>Online</item>
        <item>Grilling Supplies</item>
        <item>Bread</item>
    </string-array>

    <string-array name="amountUnitStrings">
        <item>tsp.</item>
        <item>tbs.</item>
        <item>oz.</item>
        <item>cup</item>
        <item>pt.</item>
        <item>qt.</item>
        <item>gal.</item>
        <item>ml</item>
        <item>L</item>
        <item>g</item>
        <item>kg</item>
    </string-array>

</resources>