<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/menu_save">
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Sort by:"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cgSort"
            app:singleSelection="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:id="@+id/cSortFoodName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_food_name" />

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:id="@+id/cSortFoodGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_food_group" />

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:id="@+id/cSortSourceDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_source_date" />

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:id="@+id/cSortExpireDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_expire_date" />
        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Filter by:" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cgFilter"
            app:singleSelection="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:id="@+id/cFilterExpireBefore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_expire_before" />

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:id="@+id/cFilterExpireAfter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_expire_after" />

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:id="@+id/cFilterSourceBefore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_sourced_before" />

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:id="@+id/cFilterSourceAfter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_sourced_after" />

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:id="@+id/cFilterFoodGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_food_group" />
        </com.google.android.material.chip.ChipGroup>

        <LinearLayout
            android:id="@+id/llExpireBefore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="expire before" />

            <Button
                android:id="@+id/btnExpireBefore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/datepicker_btn_txt" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llFilterExpireAfter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="expire after" />

            <Button
                android:id="@+id/btnExpireAfter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/datepicker_btn_txt" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llFilterSourcedBefore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="sourced before" />

            <Button
                android:id="@+id/btnSourcedBefore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/datepicker_btn_txt" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llFilterSourcedAfter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="sourced after" />

            <Button
                android:id="@+id/btnSourcedAfter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/datepicker_btn_txt" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llFilterFoodGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="food group" />

            <Spinner
                android:id="@+id/spFoodGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>